--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline{
             }
             steps{
                 echo "hello world"
-                sh "cat text_file.txt"
+              //  sh "cat text_file.txt"
             }
         }
     }
