--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,9 @@ pipeline{
     stages{
         stage('Build'){
             agent any
-            options{
+            /*options{
                 skipDefaultCheckout()
-            }
+            }*/
             steps{
                 echo "hello world"
               //  sh "cat text_file.txt"
