--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,11 +1,11 @@
 pipeline{
-    agent none
+    agent any
     stages{
         stage('Build'){
             agent any
-            /*options{
+            options{
                 skipDefaultCheckout()
-            }*/
+            }
             steps{
                 echo "hello world"
               //  sh "cat text_file.txt"
