--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,9 @@ pipeline{
     stages{
         stage('Build'){
             agent any
-            options{
+            /* options{
                 skipDefaultCheckout()
-            }
+            }*/
             steps{
                 echo "hello world"
               //  sh "cat text_file.txt"
